# golf-model

./: .env.example  .gitignore  .pre-commit-config.yaml  ABOUT.md  AGENTS.md  CODEBASE_ASSESSMENT.md  README.md  analyze.py  app.py  course.py  dashboard.py  deploy.sh  feature_flags.yaml  package-lock.json  profiles.yaml  program.md  pyproject.toml  requirements.txt  results.py  run_predictions.py  setup.py  setup_wizard.py  start.py  test_browser_console.html
.firecrawl/: betsperts-search.json  golf-influencers-search.json  golf-x-posts-search.json  joeholka-id-search.json  joeholka-phrase-search.json  joeholka-quote-search.json  joeholka-thread-search.json  live-refresh-snapshot-latest.json  live-refresh-snapshot.json  live-refresh-status.json  readtheline-search.json
autoresearch/: cycle_config.json  strategy_config.json
backtester/: autoresearch_config.py  autoresearch_data_health.py  autoresearch_engine.py  backfill.py  checkpoint_replay.py  dashboard_runtime.py  experiments.py  model_registry.py  optimizer_runtime.py  outlier_investigator.py  pit_models.py  pit_stats.py  proposals.py  research_cycle.py  research_dossier.py  strategy.py  theory_engine.py  weighted_walkforward.py
config/: lab_matchup_champion_trial327.json
data/: correlated_courses.json  live_refresh_snapshot.json  player_availability_overrides.yaml
docs/: AGENTS_KNOWLEDGE.md  MASTERS_COCKPIT_FREEZE.md  PROJECT_AUDIT_2026.md  card_grading_report.md  card_grading_report_2026.md  data-contracts.md  features.md  frozen-zone-paths.txt  live_dashboard_validation_summary.md  reliability_runbook.md  (+6 more)
(+722 files in other folders)
