[project]
name = "golf-model"
version = "4.2.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W"]
ignore = [
    "E501",   # line too long — handled case-by-case
    "E402",   # module-level import not at top — existing pattern in run_predictions.py
    "F401",   # unused import — some re-exports are intentional
    "E722",   # bare except — being cleaned up incrementally
    "F841",   # local variable assigned but never used — some exist in data processing
    "W293",   # whitespace before ':'
    "W291",   # trailing whitespace
    "W292",   # no newline at end of file
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E", "F", "W"]
